--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Montserrat';
   margin: 0;
@@ -237,7 +241,7 @@ body main #resume .resume-holder {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin: 2em 35em 2em 35em;
+  margin: 2em 20em 2em 20em;
 }
 
 body main #resume .resume-holder .title {
